@@ -1,5 +1,12 @@
 2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineTreeView.h:
+	* OutlineUserData.h:
+	* OutlineTreeView.cpp:
+	* OutlineTreeModel.cpp: 
+
+2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* date.wrl:
 	* gears.wrl: 
 
