@@ -4,6 +4,10 @@
 
 2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* TransformHandle.wrl: 
+
+2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Library.mdproj:
 	* Grid.wrl:
 	* Grid.wrl:
